--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>Test</h1>
 <my-test></my-test>
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
